<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="16dp">

    <Button
        android:id="@+id/btn_play_audio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/menu_play_audio" />

    <Button
        android:id="@+id/btn_play_video_mp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/menu_play_video_mp" />

    <Button
        android:id="@+id/btn_play_video_sv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/menu_play_video_sv" />

    <Button
        android:id="@+id/btn_play_video_vv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/menu_play_video_vv" />

    <Button
        android:id="@+id/btn_take_photo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/menu_take_photo" />
</LinearLayout>
