<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@color/black"
    android:padding="16dp">

    <Button
        android:id="@+id/btn_pause_audio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_pause" />

    <Button
        android:id="@+id/btn_play_audio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_play" />

    <Button
        android:id="@+id/btn_return_audio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_return" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/fondos" />
</LinearLayout>


